# mikuOJ

./: .clang-format  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  soc施工手册(新版).md
include/cppjudge/: cgroup_manager.h  common.h  comparator.h  log.h  logger.h  problem.h  sandbox.h  sandbox_internal.h
src/: CMakeLists.txt  cgroup_manager.cpp  comparator.cpp  compiler.cpp  language.cpp  log.cpp  logger.cpp  main.cpp  ns_manager.cpp  problem.cpp  sandbox_builtin.cpp  sandbox_common.cpp  sandbox_linux.cpp  seccomp_manager.cpp
submissions/c/: broken.c  endless_loop.c  infinite_output.c  memory_hog.c  return_1.c  solution.c  wrong_answer.c
submissions/cpp/: infinite_output.cpp  memory_hog.cpp
submissions/go/: broken.go  infinite_output.go  memory_hog.go  unrecovered_panic.go  wrong_answer.go
submissions/java/: broken.java  endless_loop.java  infinite_output.java  memory_hog.java  return_1.java  solution.java  wrong_answer.java
submissions/python3/: broken.py  endless_loop.py  infinite_output.py  memory_hog.py  return_1.py  wrong_answer.py
submissions/rust/: broken.rs  endless_loop.rs  infinite_output.rs  memory_hog.rs  return_1.rs  solution.rs  wrong_answer.rs
tests/: CMakeLists.txt
tests/integration/: test_all_languages.sh
tests/unit/: test_cgroup_manager.cpp  test_comparator.cpp  test_logger.cpp  test_ns_manager.cpp  test_problem.cpp  test_seccomp_manager.cpp
